--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,8 +1,128 @@
-artefact-thumb {}
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  margin: 0;
+  font: 16px/24px Helvetica Neue, sans-serif;
+  color: #444;
+}
+
+.ember-application > .ember-view {
+  position: relative;
+  height: 100%;
+}
+
+.authenticated {
+  position: relative;
+  height: 100%;
+}
+
+.authenticated__header {
+  position: absolute;
+  top: 0; right: 0; left: 0;
+  height: 32px;
+  border-bottom: 1px solid #eee;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.authenticated__main {
+  position: relative;
+  box-sizing: border-box;
+  padding-top: 32px;
+  height: 100%;
+}
+
+.authenticated__header-nav {
+  display: block;
+  float: left;
+}
+
+.authenticated__header-nav-list {
+  display: block;
+  margin: 0;
+  padding: 0;
+  list-style: none outside;
+  overflow: hidden;
+}
+
+.authenticated__header-nav-list-item {
+  display: block;
+  float: left;
+  border-right: 1px solid #eee;
+}
+
+.authenticated__header-nav-link {
+  display: block;
+  padding: 4px 8px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.authenticated__header-nav-link--active {
+  background: #eee;
+}
+
+.authenticated__header-portal {
+  display: block;
+  float: left;
+}
+
+.header__project-name {
+  display: block;
+  padding: 4px 8px;
+  background: #ccc;
+}
+
+.authenticated__header-sign-out-button {
+  position: absolute;
+  top: 0; right: 0;
+  margin: 0;
+  padding: 4px 8px;
+  appearance: none;
+  background: transparent;
+  border: 0;
+  border-left: 1px solid #eee;
+
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.projects {
+  position: relative;
+  height: 100%;
+}
+
+artefact-thumb {
+  display: block;
+  float: left;
+  padding: 8px;
+  width: 25%;
+  box-sizing: border-box;
+  border: 1px solid #eee;
+  margin: 0 0 -1px -1px;
+}
 
 .artefact-thumb__img-container {
   width: 128px; height: 128px;
 }
 .artefact-thumb__img {
   max-width: 100%; max-height: 100%;
+}
+
+.project__drop-zone {
+  display: block;
+  position: relative;
+  min-height: 100%;
+}
+
+.drop-zone--receptive {
+  background: yellow;
+}
+
+.project__name {
+  margin: 0;
 }
