--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -111,6 +111,10 @@ artefact-thumb {
   max-width: 100%; max-height: 100%;
 }
 
+.artefact-thumb__meta {
+  font-size: .75rem;
+}
+
 .project__drop-zone {
   display: block;
   position: relative;
@@ -123,4 +127,26 @@ artefact-thumb {
 
 .project__name {
   margin: 0;
+}
+
+artefact-viewer {
+  display: block;
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  z-index: 10;
+  background: rgba(0, 0, 0, .75);
+}
+
+.artefact-viewer__img-container {
+  display: flex;
+  position: absolute;
+  top: 32px; right: 32px; bottom: 32px; left: 32px;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}
+
+.artefact-viewer__img {
+  max-width: 100%; max-height: 100%;
+  pointer-events: auto;
 }
