Add tag and date modification

--- a/app/project/template.hbs
+++ b/app/project/template.hbs
@@ -7,6 +7,8 @@
     {{artefact-thumb
        artefact=artefact
        on-view="viewArtefact"
+       on-save="saveArtefact"
+       on-rollback="rollbackArtefact"
        on-remove="removeArtefact"}}
   {{/each}}
 {{/drop-zone}}
