--- a/app/components/artefact-thumb/template.hbs
+++ b/app/components/artefact-thumb/template.hbs
@@ -1,20 +1,36 @@
-<div class="artefact-thumb__img-container">
-  {{#if artefact.file}}
-    {{file-preview
-      file=artefact.file
-      class="artefact-thumb__img"}}
-  {{else if artefact.url}}
-    <img src="{{artefact.url}}" class="artefact-thumb__img">
-  {{/if}}
-</div>
+<form {{action "save" on="submit"}}>
+  <div class="artefact-thumb__img-container">
+    {{#if artefact.file}}
+      {{file-preview
+        file=artefact.file
+        class="artefact-thumb__img"}}
+    {{else if artefact.url}}
+      <img src="{{artefact.url}}" class="artefact-thumb__img">
+    {{/if}}
+  </div>
 
-<div class="artefact-thumb__meta">
-  {{#if artefact.file}}
-    <em>Uploading…</em>
-  {{else}}
-    {{moment-format artefact.createdAt}}
-  {{/if}}
-</div>
+  <div class="artefact-thumb__meta">
+    {{#if artefact.file}}
+      <em>Uploading…</em>
+    {{else}}
+      <div>
+        <label>Date</label>
+        {{pikaday-input
+          value=artefact.createdAt
+          format="MM/DD/YYYY"}}
+      </div>
 
-<button {{action "view"}}>View</button>
-<button {{action "remove"}}>Remove</button>
+      <div>
+        <label>Tag</label>
+        {{input type="text" value=artefact.tag}}
+      </div>
+    {{/if}}
+  </div>
+
+  {{#if artefact.hasDirtyAttributes}}
+    <button type="submit">Save</button>
+    <button {{action "rollback"}}>Reset</button>
+  {{/if}}
+  <button {{action "view"}}>View</button>
+  <button {{action "remove"}}>Remove</button>
+</form>
