--- a/app/components/artefact-thumb/template.hbs
+++ b/app/components/artefact-thumb/template.hbs
@@ -17,7 +17,7 @@
         <label>Date</label>
         {{pikaday-input
           value=artefact.createdAt
-          format="MM/DD/YYYY"}}
+          format="DD/MM/YYYY"}}
       </div>
 
       <div>
