--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,7 +5,7 @@ html {
 body {
   height: 100%;
   margin: 0;
-  font: 16px/24px Helvetica Neue, sans-serif;
+  font: 16px/1.5 Helvetica Neue, sans-serif;
   color: #444;
 }
 
@@ -112,6 +112,7 @@ artefact-thumb {
 }
 
 .artefact-thumb__meta {
+  margin-top: 4px;
   font-size: .75rem;
 }
 
