--- a/app/project/template.hbs
+++ b/app/project/template.hbs
@@ -6,22 +6,40 @@
 {{/portal-content}}
 
 {{#drop-zone on-drop="addFiles" class="project__drop-zone"}}
-  {{#group-by-week items=model.artefacts as |week items|}}
-    <h3 class="project__week-header">
-      Week: {{moment-format week.date "D MMM YYYY"}}
-    </h3>
-
-    <div class="project__week-artefacts">
-      {{#each items as |item|}}
-        {{artefact-thumb
-           artefact=item
-           on-view="viewArtefact"
-           on-save="saveArtefact"
-           on-rollback="rollbackArtefact"
-           on-remove="removeArtefact"}}
-      {{/each}}
-    </div>
-  {{/group-by-week}}
+  <table>
+    <tbody>
+      {{#group-by-week-and-tag items=model.artefacts as |weeks|}}
+        {{#each weeks key="id" as |week|}}
+          <tr>
+            <th>
+              Week: {{moment-format week.date "D MMM YYYY"}}
+            </th>
+          </tr>
+          <tr>
+            {{#each week.tags key="name" as |tag|}}
+              <th>
+                {{tag.name}}
+              </th>
+            {{/each}}
+          </tr>
+          <tr>
+            {{#each week.tags key="name" as |tag|}}
+              <td>
+                {{#each tag.items as |item|}}
+                  {{artefact-thumb
+                     artefact=item
+                     on-view="viewArtefact"
+                     on-save="saveArtefact"
+                     on-rollback="rollbackArtefact"
+                     on-remove="removeArtefact"}}
+                {{/each}}
+              </td>
+            {{/each}}
+          </tr>
+        {{/each}}
+      {{/group-by-week-and-tag}}
+    </tbody>
+  </table>
 {{/drop-zone}}
 
 {{outlet}}
