--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -106,6 +106,7 @@ artefact-thumb {
 .artefact-thumb__img-container {
   width: 128px; height: 128px;
   margin: 0 auto;
+  cursor: pointer;
 }
 .artefact-thumb__img {
   max-width: 100%; max-height: 100%;
@@ -158,4 +159,21 @@ artefact-viewer {
 .artefact-viewer__img {
   max-width: 100%; max-height: 100%;
   pointer-events: auto;
+}
+
+.artefact-table {
+  border-collapse: collapse;
+  table-layout: auto;
+  width: 100%;
+}
+.artefact-table__tag-heading {
+  background: #eee;
+}
+.artefact-table__week-heading {
+  font-weight: normal;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.artefact-table__cell {
+  vertical-align: top;
 }
