--- a/app/project/template.hbs
+++ b/app/project/template.hbs
@@ -1,30 +1,32 @@
 {{#portal-content for="header"}}
-  <li>
-    {{link-to model.name "project" model
-      class="authenticated__header-nav-link"
-      activeClass="authenticated__header-nav-link--active"}}</li>
+  <h1 class="header__title">
+    {{model.name}}
+  </h1>
 {{/portal-content}}
 
 {{#drop-zone on-drop="addFiles" class="project__drop-zone"}}
-  <table class="artefact-table">
-    <tbody>
-      {{#group-by-week-and-tag items=model.artefacts as |weeks tags|}}
+  {{#group-by-week-and-tag items=model.artefacts as |weeks tags|}}
+    <table class="artefact-table">
+      <thead>
         {{#sticky-element tagName="tr"}}
           {{#each tags as |tag|}}
-            <th class="artefact-table__tag-heading" style="width: {{math-divide 100 tags.length}}%">
+            <th class="artefact-table__tag-cell">
               {{tag}}
             </th>
           {{/each}}
         {{/sticky-element}}
+      </thead>
+
+      <tbody>
         {{#each weeks key="id" as |week|}}
           <tr>
-            <th class="artefact-table__week-heading" colspan={{tags.length}}>
+            <th class="artefact-table__week-cell" colspan={{tags.length}}>
               Week: {{moment-format week.date "D MMM YYYY"}}
             </th>
           </tr>
           <tr>
             {{#each week.tags key="name" as |tag|}}
-              <td class="artefact-table__cell">
+              <td class="artefact-table__items-cell">
                 {{#each tag.items as |item|}}
                   {{artefact-thumb
                      artefact=item
@@ -33,13 +35,14 @@
                      on-rollback="rollbackArtefact"
                      on-remove="removeArtefact"}}
                 {{/each}}
+                <span class="artefact-table__spacer">&nbsp;</span>
               </td>
             {{/each}}
           </tr>
         {{/each}}
-      {{/group-by-week-and-tag}}
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  {{/group-by-week-and-tag}}
 {{/drop-zone}}
 
 {{outlet}}
